Splash spacing fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,7 +78,6 @@ h1 {
   min-height: 100dvh;
   padding: 24px;
   text-align: center;
-  gap: 20px;
 
   h1 {
     font-size: 32px;
@@ -93,6 +92,10 @@ h1 {
 
   &.hidden {
     display: none;
+  }
+
+  label {
+    margin: 1rem;
   }
 }
 
